# vapoursynth-mvtools

./: .gitignore  Makefile.am  configure.ac  meson.build  meson_options.txt  readme.rst
.github/workflows/: build-windows.yml
src/: Bullshit.h  CPU.c  CPU.cpp  CPU.h  CommonFunctions.h  CommonMacros.h  CopyCode.c  CopyCode.cpp  CopyCode.h  DCT.cpp  DCT.h  DCTFFTW.cpp  DCTFFTW.h  EntryPoint.c  EntryPoint.cpp  FakeBlockData.cpp  FakeBlockData.h  FakeGroupOfPlanes.cpp  FakeGroupOfPlanes.h  FakePlaneOfBlocks.cpp  FakePlaneOfBlocks.h  Fakery.c  Fakery.h  GroupOfPlanes.c  GroupOfPlanes.cpp  GroupOfPlanes.h  Interpolation.cpp  Interpolation.h  Luma.c  Luma.cpp  Luma.h  MVAnalyse.c  MVAnalyse.cpp  MVAnalysisData.c  MVAnalysisData.h  MVBlockFPS.c  MVBlockFPS.cpp  MVClip.cpp  MVClip.h  MVCompensate.c  (+67 more)
src/asm/: CopyCode.asm  Interpolation.asm  Luma.asm  MVDegrains.asm  Overlap.asm  SAD.asm  Variance.asm  aarch64-asm.S  aarch64-pixel-a.S  aarch64-pixel.h  const-a.asm  cpu-a.asm  pixel-32.asm  pixel-a.asm  sad-a.asm
